[metadata]
name = autobackupper-MaksL
version = 0.0.0
author = MaksL
author_email = contactmaksloboda@gmail.com
description = utility that backup your work using git
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maksloboda/AutoBackuper
project_urls =
    Bug Tracker = https://github.com/maksloboda/AutoBackuper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
